# AdpTrackerCli

./: .gitignore  PROMPTS.md  README.md  pyproject.toml
data/: ADP_NER_history.csv  line_national.csv
src/adptracker/: __init__.py  backtest.py  cli.py  config.py  dataset.py  display.py  explain.py  fetch.py  forecast.py
tests/: test_backtest.py  test_dataset.py  test_explain.py  test_fetch.py  test_forecast.py
