[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "adptracker"
version = "0.1.0"
description = "Small CLI for ADP National Employment Report history and forecasts."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ADP Tracker CLI" }]
dependencies = []

[project.scripts]
adptracker = "adptracker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
